--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-contrib-cssmin": "^0.13.0",
+    "grunt-contrib-sass": "^1.0.0",
     "grunt-contrib-uglify": "^0.9.1",
     "grunt-ftp-deploy": "^0.1.10",
     "grunt-if": "^0.1.5",
