--- a/package.json
+++ b/package.json
@@ -1,12 +1,9 @@
 {
   "name": "allebach-joomla-template",
   "devDependencies": {
-    "grunt": "^0.4.5",
-    "grunt-contrib-cssmin": "^0.13.0",
-    "grunt-contrib-sass": "^1.0.0",
-    "grunt-contrib-uglify": "^0.9.1",
-    "grunt-ftp-deploy": "^0.1.10",
-    "grunt-if": "^0.1.5",
-    "grunt-prompt": "^1.3.3"
+    "gulp": "^3.9.1",
+    "gulp-sass": "^2.3.2",
+    "gulp-uglify": "^2.0.1",
+    "gulp-uglifycss": "^1.0.6"
   }
 }
